--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cra-template": "1.2.0",
     "firebase": "^11.0.2",
     "framer-motion": "^11.13.5",
+    "gsap": "^3.12.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
