--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "firebase": "^11.0.2",
     "framer-motion": "^11.13.5",
     "gsap": "^3.12.5",
     "react": "^19.0.0",
+    "react-canvas-confetti": "^2.0.7",
+    "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-use": "^17.6.0",
+    "use-sound": "^4.0.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
